--- a/a.html
+++ b/a.html
@@ -9,7 +9,7 @@ html, body {
 
 body {
   background-color: black;
-  background-image: url(images/static.gif);
+  background-image: url(images/35.gif);
   background-size: cover !important;
 
   background-repeat: no-repeat;
